--- a/punto_silla.ipynb
+++ b/punto_silla.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 328,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-23T08:30:19.666729568Z",
-     "start_time": "2024-02-23T08:30:19.620052680Z"
+     "end_time": "2024-02-23T09:50:09.302448267Z",
+     "start_time": "2024-02-23T09:50:09.260259484Z"
     }
    },
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 329,
    "outputs": [],
    "source": [
     "def generar_array(n):\n",
@@ -31,15 +31,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T08:30:19.669175271Z",
-     "start_time": "2024-02-23T08:30:19.666507117Z"
+     "end_time": "2024-02-23T09:50:09.302725541Z",
+     "start_time": "2024-02-23T09:50:09.302324971Z"
     }
    },
    "id": "c0e40e430b9d18"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 330,
    "outputs": [],
    "source": [
     "def getcolmax(array, num):\n",
@@ -48,13 +48,17 @@
     "    return bo"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T09:50:09.302876566Z",
+     "start_time": "2024-02-23T09:50:09.302403384Z"
+    }
    },
    "id": "c9787f0c2fb1a5d1"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 331,
    "outputs": [],
    "source": [
     "def getcolmin(array, num):\n",
@@ -62,29 +66,37 @@
     "    return bo"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T09:50:09.302952876Z",
+     "start_time": "2024-02-23T09:50:09.302427892Z"
+    }
    },
    "id": "e7d3f337e98d4049"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "outputs": [],
    "source": [
     "def getrowmax(array, num):\n",
     "    bo = False\n",
     "    for i in range(len(array)):\n",
-    "        \n",
-    "    return bo"
+    "        print(array[0][i])\n",
+    "        return bo"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T09:50:09.303011374Z",
+     "start_time": "2024-02-23T09:50:09.302576140Z"
+    }
    },
    "id": "9d5a194c14864d72"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "outputs": [],
    "source": [
     "def getrowmin(array, num):\n",
@@ -93,13 +105,17 @@
     "    return bo"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T09:50:09.303331977Z",
+     "start_time": "2024-02-23T09:50:09.302602806Z"
+    }
    },
    "id": "ff497171788060e7"
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 334,
    "outputs": [],
    "source": [
     "def buscar(array):\n",
@@ -110,51 +126,35 @@
     "        colmin = getcolmin(array, j)\n",
     "        colmax = getcolmax(array, j)\n",
     "        if rowmax == True and colmin == True or rowmin == True and colmax == True:\n",
-    "            print(array[j][i])\n",
-    "            \n",
-    "           \n",
-    "   \n"
+    "#            print(array[j][i])\n",
+    "            pass"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T08:30:19.669300929Z",
-     "start_time": "2024-02-23T08:30:19.666605615Z"
+     "end_time": "2024-02-23T09:50:09.303413911Z",
+     "start_time": "2024-02-23T09:50:09.302628671Z"
     }
    },
    "id": "c5f4bc00ca734226"
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-23T08:30:19.669376172Z",
-     "start_time": "2024-02-23T08:30:19.666628895Z"
-    }
-   },
-   "id": "c3b04a749b0b03f7"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 335,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "4\n",
-      "5\n",
-      "6\n",
-      "3\n",
       "4\n",
-      "7\n",
-      "10\n",
-      "11\n",
-      "12\n"
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n"
      ]
     }
    ],
@@ -164,22 +164,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T08:30:19.669560943Z",
-     "start_time": "2024-02-23T08:30:19.666655125Z"
+     "end_time": "2024-02-23T09:50:09.303786487Z",
+     "start_time": "2024-02-23T09:50:09.302795588Z"
     }
    },
    "id": "abff44c152787116"
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 335,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T08:30:19.669636573Z",
-     "start_time": "2024-02-23T08:30:19.666684945Z"
+     "end_time": "2024-02-23T09:50:09.303903316Z",
+     "start_time": "2024-02-23T09:50:09.302842200Z"
     }
    },
    "id": "847a6ba6fb07b0c1"
