--- a/punto_silla.ipynb
+++ b/punto_silla.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 25,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.302448267Z",
-     "start_time": "2024-02-23T09:50:09.260259484Z"
+     "end_time": "2024-02-24T09:22:01.348692900Z",
+     "start_time": "2024-02-24T09:22:01.336115Z"
     }
    },
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "def generar_array(n):\n",
@@ -31,34 +31,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.302725541Z",
-     "start_time": "2024-02-23T09:50:09.302324971Z"
+     "end_time": "2024-02-24T09:22:01.348975800Z",
+     "start_time": "2024-02-24T09:22:01.340311300Z"
     }
    },
    "id": "c0e40e430b9d18"
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "def getcolmax(array, num):\n",
-    "    bo = False\n",
-    "    \n",
-    "    return bo"
+    "    max_val = array[0][num]\n",
+    "    for i in range(1, len(array)):\n",
+    "        if array[i][num] > max_val:\n",
+    "            max_val = array[i][num]\n",
+    "            print(max_val)\n",
+    "    return max_val"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.302876566Z",
-     "start_time": "2024-02-23T09:50:09.302403384Z"
+     "end_time": "2024-02-24T09:22:01.348975800Z",
+     "start_time": "2024-02-24T09:22:01.344847200Z"
     }
    },
    "id": "c9787f0c2fb1a5d1"
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "def getcolmin(array, num):\n",
@@ -68,35 +71,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.302952876Z",
-     "start_time": "2024-02-23T09:50:09.302427892Z"
+     "end_time": "2024-02-24T09:22:01.356394800Z",
+     "start_time": "2024-02-24T09:22:01.348692900Z"
     }
    },
    "id": "e7d3f337e98d4049"
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "def getrowmax(array, num):\n",
     "    bo = False\n",
     "    for i in range(len(array)):\n",
-    "        print(array[0][i])\n",
+    "        \n",
     "        return bo"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.303011374Z",
-     "start_time": "2024-02-23T09:50:09.302576140Z"
+     "end_time": "2024-02-24T09:22:01.356898800Z",
+     "start_time": "2024-02-24T09:22:01.352483400Z"
     }
    },
    "id": "9d5a194c14864d72"
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "def getrowmin(array, num):\n",
@@ -107,15 +110,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.303331977Z",
-     "start_time": "2024-02-23T09:50:09.302602806Z"
+     "end_time": "2024-02-24T09:22:01.363951900Z",
+     "start_time": "2024-02-24T09:22:01.354990900Z"
     }
    },
    "id": "ff497171788060e7"
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def buscar(array):\n",
@@ -132,29 +135,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.303413911Z",
-     "start_time": "2024-02-23T09:50:09.302628671Z"
+     "end_time": "2024-02-24T09:22:01.389620900Z",
+     "start_time": "2024-02-24T09:22:01.360504300Z"
     }
    },
    "id": "c5f4bc00ca734226"
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n"
+      "10\n",
+      "11\n",
+      "7\n",
+      "12\n",
+      "10\n",
+      "11\n",
+      "7\n",
+      "12\n",
+      "10\n",
+      "11\n",
+      "7\n",
+      "12\n"
      ]
     }
    ],
@@ -164,22 +170,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.303786487Z",
-     "start_time": "2024-02-23T09:50:09.302795588Z"
+     "end_time": "2024-02-24T09:22:01.391511Z",
+     "start_time": "2024-02-24T09:22:01.363517500Z"
     }
    },
    "id": "abff44c152787116"
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 32,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T09:50:09.303903316Z",
-     "start_time": "2024-02-23T09:50:09.302842200Z"
+     "end_time": "2024-02-24T09:22:01.391511Z",
+     "start_time": "2024-02-24T09:22:01.366466Z"
     }
    },
    "id": "847a6ba6fb07b0c1"
