--- a/Flight_Delay-Student_1_1.ipynb
+++ b/Flight_Delay-Student_1_1.ipynb
@@ -1981,6 +1981,7 @@
    "source": [
     "Busque valores nulos en las columnas. Puede utilizar la función `isnull()` ([documentación de pandas.isnull] (https://pandas.pydata.org/pandas-docs/version/0.17.0/generated/pandas.isnull.html)).\n",
     "\n",
+    "\n",
     "**Sugerencia**: `isnull()` detecta si el valor en particular es nulo o no. Devuelve un booleano (*Verdadero* o *Falso*) en su lugar. Para sumar el número de columnas, utilice la función `sum(axis=0)` (por ejemplo, `df.isnull().sum(axis=0)`)."
    ]
   },
@@ -3009,7 +3010,7 @@
      "evalue": "invalid syntax (1777439686.py, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[41], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    instance_count=<CODE>,\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001B[0;36m  Cell \u001B[0;32mIn[41], line 8\u001B[0;36m\u001B[0m\n\u001B[0;31m    instance_count=<CODE>,\u001B[0m\n\u001B[0m                   ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
      ]
     }
    ],
